--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="bg-red-500">
-      Hello cac ban
-    </div>
+    
+
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
